# modern-cpp-modular-project

./: .gitignore  CMakeLists.txt  Learning_plan.md  README.md
apps/main_app/: CMakeLists.txt  main.cpp
cmake/: InstallHelpers.cmake  MathEngineConfig.cmake.in
examples/consumer_app/: CMakeLists.txt  main.cpp
libs/logger/: CMakeLists.txt
libs/logger/include/logger/: logger.hpp
libs/math_engine/: CMakeLists.txt
libs/math_engine/include/math/: calculator.hpp
libs/math_engine/src/: calculator.cpp
tests/: CMakeLists.txt  test_math.cpp
